# EriDiffusion

./: .gitignore  AGENTS.md  CANDLE_BUGS_AND_WORKAROUNDS.md  CANDLE_FRAMEWORK_ANALYSIS.md  CANDLE_MEMORY_EFFICIENCY.md  CANDLE_MEMORY_MANAGEMENT_IMPLEMENTATION.md  CANDLE_MODIFICATION_PLAN.md  CANDLE_VAE_CPU_OFFLOADING.md  CHANGELOG.md  CLAUDE.md  CODE_METRICS.md  COMPREHENSIVE_PIPELINE_ANALYSIS.md  CUDA_KERNEL_INTEGRATION_COMPLETE.md  CUDA_VS_CANDLE_NOTES.md  Cargo.toml  Changes.md  ERI_ML_LAYER0_DESIGN.md  FLUX_GPU_INTEGRATION_STATUS.md  FLUX_GPU_KERNEL_INTEGRATION.md  FLUX_IMPLEMENTATION_STATUS.md  FLUX_INT8_QUANTIZATION_STATUS.md  FLUX_LORA_CODE_REVIEW_FINAL.md  FLUX_LORA_CODE_REVIEW_RESULTS.md  FLUX_LORA_COMPLETE.md  FLUX_LORA_IMPLEMENTATION_COMPLETE.md  FLUX_LORA_IMPLEMENTATION_PLAN.md  FLUX_LORA_IMPLEMENTATION_STATUS.md  FLUX_LORA_STRATEGY.md  FLUX_LORA_TRAINING_ANALYSIS.md  FLUX_LORA_TRAINING_FINAL.md  FLUX_MEMORY_OPTIMIZATION_COMPLETE.md  FLUX_MEMORY_SOLUTION.md  FLUX_PIPELINE_STATUS.md  FLUX_SAMPLING_IMPLEMENTATION.md  FLUX_TENSOR_NAMING_SOLUTION.md  HANDOFF_2026-05-09_SESSION.md  HANDOFF_2026-05-11_KLEIN9B_PERF_LOSS_GAP.md  HOW_TO_MODIFY_CANDLE.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_INTEGRATION_PLAN.md  (+76 more)
crates/eridiffusion-cli/: Cargo.toml
crates/eridiffusion-cli/src/: main.rs
crates/eridiffusion-core/: Cargo.toml
crates/eridiffusion-core/src/: adapter.rs  debug.rs  lib.rs  lora.rs  lycoris.rs
crates/eridiffusion-core/tests/: debug_smoke.rs  e2e_training.rs  ernie_keys.rs  ernie_real.rs  flux_real_weights.rs  klein9b_real_weights.rs  smoke_test.rs  test_rms.rs  trace_all.rs  trace_gelu.rs  verified_smoke.rs
eridiffusion/: .gitignore  ARCHITECTURE.md  CANDLE_BUG_REPORT.md  CANDLE_DEVICE_BUG.md  CANDLE_DEVICE_BUG_ANALYSIS.md  CANDLE_DIFFUSION_MODELS_SUPPORT.md  CHANGELOG.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  CUDA_KERNEL_ISSUE.md  Cargo.toml  Cargo_simple.toml  DATALOADER_IMPROVEMENTS.md  DATALOADER_REVIEW.md  DATASET_FUNCTIONALITY.md  DEVICE_API_FIXES.md  DEVICE_DEBUG_SUMMARY.md  DEVICE_FIX_COMPLETE.md  FAKE_CODE_AUDIT.md  FAKE_CODE_SCANNER.md  FLUX_24GB_TRAINING.md  FLUX_ARCHITECTURE_MISMATCH.md  FLUX_ISSUES_AND_FIXES.md  FLUX_LORA_IMPLEMENTATION_STATUS_2025.md  FLUX_LORA_TRAINING_GUIDE.md  FLUX_TRAINER_SUMMARY.md  FLUX_TRAINING_FIX.md  GENERATION_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INCOMPLETE_CODE_AUDIT.md  LICENSE  LICENSE-MIT  MODELS.md  Makefile  NETWORK_ADAPTER_REFACTOR.md  OPTIMIZER_ADDITIONS_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PIPELINE_REPLACEMENT_SUMMARY.md  README.md  ROADMAP.md  (+81 more)
eridiffusion/.cargo/: config.toml
eridiffusion/.githooks/: pre-commit
eridiffusion/.github/workflows/: ci.yml  fake-code-detector.yml
eridiffusion/benches/: benchmark_conv2d.rs  inference_bench.rs  memory_bench.rs  training_bench.rs
eridiffusion/config/: chroma_lora_training.yaml  flux_lora_24gb.yaml  flux_lora_cpu_offload_test.yaml  flux_lora_example.yaml  flux_lora_minimal.yaml  flux_lora_test.yaml  flux_lora_training.yaml  kontext_lora_training.yaml  omnigen2_lora_config.yaml  sdxl_lora_test.yaml  sdxl_lora_woman.yaml
eridiffusion/configs/: sd35_lokr_40woman.json  sd35_lokr_rust.json  training_configs.yaml
eridiffusion/crates/adapters/: Cargo.toml
eridiffusion/crates/core/: Cargo.toml  build.rs
eridiffusion/crates/data/: Cargo.toml
eridiffusion/crates/extensions/: Cargo.toml
eridiffusion/crates/inference/: Cargo.toml
eridiffusion/crates/models/: Cargo.toml
eridiffusion/crates/networks/: Cargo.toml
eridiffusion/crates/training/: Cargo.toml
eridiffusion/crates/web/: Cargo.toml
eridiffusion/cudnn-sys/: Cargo.toml  build.rs
eridiffusion/cudnn-sys/src/: lib.rs
eridiffusion/examples/: async_operations.rs  benchmark_vae.rs  builder_api.rs  comprehensive_dataset_demo.rs  convert_tokenizers.py  create_test_dataset.py  create_test_dataset.sh  flame_dataloader_example.rs  flame_flux_inference.rs  flame_sd35_inference.rs  flame_sdxl_inference.rs  flame_training_example.rs  flux_inference.rs  flux_inference_minimal.rs  flux_int8_example.rs  flux_standalone.rs  flux_trainer_simpletuner_style.rs  flux_training_with_sampling.rs  full_training_test.rs  generate_all_models.rs  generate_beach_lady.rs  generate_images.rs  generate_real.rs  generate_sd35.rs  generate_sdxl_image.rs  generate_with_pipeline.rs  inference_config.yaml  inference_demo.rs  inspect_vae_weights.rs  lokr_training_demo.rs  ppm_to_png.rs  quick_generate.rs  quick_vae_benchmark.rs  real_generation.rs  sd3_candle_demo.rs  sd3_direct.rs  sd3_generate.rs  sd3_native.rs  sd3_pipeline_example.rs  simple_timing.rs  (+16 more)
eridiffusion/examples/inference/: flux_generate.rs  run_all_models.rs  sd15_generate.rs  sdxl_generate.rs  unified_pipeline.rs
eridiffusion/inference/: AGENTS.md  Cargo.toml
eridiffusion/inference/src/: lib.rs
eridiffusion/scripts/: run_all_tests.sh
eridiffusion/src/: cudnn_backend.rs  data.rs  device.rs  device_wrapper.rs  eridiffusion_core.rs  flame_training.rs  flame_vision.rs  lib.rs  logging.rs  main.rs  patched_var_builder.rs  stable_diffusion_compat.rs  tensor_backend.rs  tensor_fix.rs  tokenizers.rs  training_verifier.rs  weight_loader.rs
eridiffusion/src/config/: mod.rs  trainer_config.rs
eridiffusion/src/inference/: flame_inference.rs  flux.rs  flux_sampling.rs  klein_sampling.rs  mmdit_streaming.rs  mod.rs  model_loader.rs  numerical_accuracy.rs  qwen_image.rs  sd35.rs  sd35_sampling.rs  sd35_simple.rs  sdxl.rs  sdxl_inference.rs  sdxl_sampling.rs  sdxl_weight_converter.rs  unified_inference.rs  unified_sampling.rs  utils.rs  vae_inference.rs  zimage_sampling.rs
eridiffusion/src/kernels/: fused_adam.cu  fused_adam.rs  group_norm.cu  mod.rs  rms_norm.cu  rope.cu
eridiffusion/src/loaders/: flame_loader.rs  lazy_safetensors.rs  mod.rs  (+17 more)
eridiffusion/tests/: cli_test.rs  flux_lora_gradient_test.rs  flux_lora_test.rs  integration_tests.rs  lokr_e2e_test.rs  pipeline_tests.rs  sd35_training_integration_test.rs  simple_flux_test.rs  strict_mmdit_block.rs
eridiffusion/xtask/: Cargo.toml
sd35_lokr_trainer/: Cargo.toml
sd35_lokr_trainer/src/: main.rs
(+3015 files in other folders)
