[package]
name = "eridiffusion"
version = "0.1.0"
edition = "2021"
authors = ["EriDiffusion Team"]
description = "Pure Rust trainer for modern diffusion models"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies - Requires Trainable-Candle fork
candle-core = { path = "../Trainable-Candle/candle-core", features = ["cuda", "cuda-backward"] }
candle-nn = { path = "../Trainable-Candle/candle-nn" }
candle-transformers = { path = "../Trainable-Candle/candle-transformers" }

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# File handling
safetensors = "0.4"
image = "0.24"
half = "2.4"
bytemuck = { version = "1.14", features = ["derive"] }

# Math and randomness
rand = "0.8"
rand_distr = "0.4"

# Text processing
tokenizers = "0.19"

# System
rayon = "1.10"
num_cpus = "1.16"
chrono = "0.4"
once_cell = "1.19"
lazy_static = "1.4"
thiserror = "1.0"

# Optional dependencies for development
indicatif = { version = "0.17", optional = true }
tokio = { version = "1.40", features = ["full"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[features]
default = ["progress-bar"]
progress-bar = ["indicatif"]
async = ["tokio"]

[[bin]]
name = "trainer"
path = "src/bin/trainer.rs"

# Individual trainers (for direct access if needed)
[[bin]]
name = "train_sdxl_lora"
path = "src/bin/train_sdxl_lora.rs"

[[bin]]
name = "train_sd35_lora"
path = "src/bin/train_sd35_lora.rs"

[[bin]]
name = "train_flux_lora"
path = "src/bin/train_flux_lora.rs"

# Test binaries
[[bin]]
name = "test_sampling_pipelines"
path = "src/bin/test_sampling_pipelines.rs"

[[bin]]
name = "test_sampling_integration"
path = "src/bin/test_sampling_integration.rs"

[[bin]]
name = "create_test_dataset"
path = "src/bin/create_test_dataset.rs"

[[bin]]
name = "test_jpg_png_generation"
path = "test_jpg_png_generation.rs"

[[bin]]
name = "generate_swan_real"
path = "src/bin/generate_swan_real.rs"

[[example]]
name = "generate_test_images"
path = "examples/generate_test_images.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1