[workspace]
resolver = "2"
members = [
    "crates/eridiffusion-core",
    "crates/eridiffusion-cli",
]

[workspace.dependencies]
flame-core = { path = "../flame-core" }
lycoris-rs = { path = "../eri-lycoris/lycoris-rs" }
cudarc = { version = "0.11.9", default-features = false, features = ["driver", "cublas", "cublaslt", "nvrtc", "cuda-12050", "f16"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rand_distr = "0.4"
image = "0.24"
safetensors = "0.4"
parking_lot = "0.12"
lazy_static = "1.4"
clap = { version = "4", features = ["derive"] }

# 2026-05-12 (launch-storm Phase 4): vendored cudarc 0.11.9 with the
# bind_to_thread thread-local fast-path. Must mirror flame-core's
# [patch.crates-io] so the same cudarc rmeta is used across the
# entire dependency graph.
[patch.crates-io]
cudarc = { path = "../cudarc-pinctx" }
