[package]
name = "eridiffusion"
version = "0.1.0"
edition = "2021"
autobins = false

[features]
samples = []
legacy-bins = []

[lib]
name = "eridiffusion"
path = "src/lib.rs"

[dependencies]
flame-core = { path = "../flame/flame-core" }
half = "2.4"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokio = { version = "1.40", features = ["rt"] }
eridiffusion-training = { path = "crates/training" }
eridiffusion-common-weights = { path = "crates/common/weights" }
eridiffusion-core = { path = "crates/core" }
eridiffusion-models = { path = "crates/models" }
adapters = { path = "crates/adapters" }
atty = "0.2.14"
bincode = "1.3.3"
bytemuck = "1.23.2"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
image = "0.24.9"
lazy_static = "1.5.0"
log = "0.4.28"
memmap2 = "0.9.4"
once_cell = "1.21.3"
rand = "0.8.5"
serde_json = "1.0.143"
serde_yaml = "0.9.34+deprecated"
termcolor = "1.4.1"
thiserror = "1.0.69"
tokenizers = "0.15.2"
num-traits = "0.2"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
