[package]
name = "eridiffusion"
version = "0.1.0"
edition = "2021"
autobins = false

[features]
samples = []
legacy-bins = []
cuda = ["flame-core/cuda"]
bf16_u16 = ["flame-core/bf16_u16"]

[[bin]]
name = "trainer"
path = "src/bin/trainer.rs"

[[bin]]
name = "flux_minimal"
path = "src/bin/flux_minimal.rs"
required-features = ["legacy-bins"]

[[bin]]
name = "sd35"
path = "src/bin/sd35.rs"
required-features = ["legacy-bins"]

[[bin]]
name = "sd35_mmdit_validate"
path = "src/bin/sd35_mmdit_validate.rs"
required-features = ["legacy-bins"]

[[bin]]
name = "sd35_simple"
path = "src/bin/sd35_simple.rs"
required-features = ["legacy-bins"]

[[bin]]
name = "test_permute"
path = "src/bin/test_permute.rs"
required-features = ["legacy-bins"]

[[bin]]
name = "inspect_vae"
path = "src/bin/inspect_vae.rs"
required-features = ["legacy-bins"]

[[bin]]
name = "test_vae_size"
path = "src/bin/test_vae_size.rs"
required-features = ["legacy-bins"]

[[bin]]
name = "verify_vae_conv"
path = "src/bin/verify_vae_conv.rs"
required-features = ["legacy-bins"]

[[bin]]
name = "verify_rms_norm"
path = "src/bin/verify_rms_norm.rs"

[[bin]]
name = "verify_attention"
path = "src/bin/verify_attention.rs"
required-features = ["legacy-bins"]

[[bin]]
name = "klein_generate"
path = "src/bin/klein_generate.rs"

[[bin]]
name = "zimage_generate"
path = "src/bin/zimage_generate.rs"

[[bin]]
name = "ltx2_generate"
path = "src/bin/ltx2_generate.rs"

[lib]
name = "eridiffusion"
path = "src/lib.rs"

[dependencies]
flame-core = { path = "/home/alex/EriDiffusion/flame-core", features = ["shared_storage"] }
half = "2.4"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokio = { version = "1.40", features = ["rt"] }
eridiffusion-training = { path = "crates/training" }
eridiffusion-common-weights = { path = "crates/common/weights" }
eridiffusion-core = { path = "crates/core" }
eridiffusion-models = { path = "crates/models" }
adapters = { path = "crates/adapters" }
atty = "0.2.14"
bincode = "1.3.3"
bytemuck = "1.23.2"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
image = "0.24.9"
lazy_static = "1.5.0"
log = "0.4.28"
memmap2 = "0.9.4"
once_cell = "1.21.3"
rand = "0.8.5"
serde_json = "1.0.143"
serde_yaml = "0.9.34+deprecated"
termcolor = "1.4.1"
thiserror = "1.0.69"
tokenizers = "0.15.2"
rayon = "1.8"
num-traits = "0.2"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
