[package]
name = "eridiffusion-cli"
version = "0.1.0"
edition = "2021"
description = "EriDiffusion Rust port — CLI"

[[bin]]
name = "eridiffusion"
path = "src/main.rs"

[dependencies]
eridiffusion-core = { path = "../eridiffusion-core" }
flame-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.10"
image = "0.24"
md5 = "0.7"
rand = "0.8"
rand_distr = "0.4"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde_json = "1"
