[package]
name = "eridiffusion-data"
version = "0.1.0"
edition = "2021"

[dependencies]
eridiffusion-core = { path = "../core" }
eridiffusion-models = { path = "../models" }
candle-core = { version = "0.9", features = ["cuda"] }
candle-nn = "0.9"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
lru = "0.12"
fastrand = "2.0"
regex = "1.10"
sha2 = "0.10"
lz4 = "1.28"
zstd = "0.13"
snap = "1.1"
rand = "0.8"
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp", "tiff", "avif"] }
imageproc = "0.24"
rayon = "1.10"
dashmap = "6.1"
memmap2 = "0.9"
bincode = "1.3"
tar = "0.4"
flate2 = "1.0"
safetensors = "0.4"
once_cell = "1.19"
tracing = "0.1"
rand_distr = "0.4"
glob = "0.3"
bytemuck = "1.14"