[package]
name = "eridiffusion-data"
version = "0.1.0"
edition = "2021"

[dependencies]
flame-core = {path = "../../../flame/flame-core", default-features = false, features = ["cuda", "bf16_u16", "bf16_kernels"]}
eridiffusion-core = { path = "../core" }
eridiffusion-models = { path = "../models" }
eridiffusion-common-vae = { path = "../common/vae" }
eridiffusion-common-weights = { path = "../common/weights" }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
safetensors = "0.4"
tracing = "0.1"
dashmap = "6.1"
bincode = "1.3"
sha2 = "0.10"
half = "2.4"
bytemuck = { version = "1.16", features = ["extern_crate_alloc"] }
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff"] }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
rand = "0.8"
