[package]
name = "eridiffusion-extensions"
version = "0.1.0"
edition = "2021"
authors = ["AI-Toolkit Contributors"]
description = "Extension system for ai-toolkit"
license = "MIT OR Apache-2.0"

[dependencies]
eridiffusion-core = { path = "../core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Plugin system
libloading = "0.8"
wasmer = { version = "4.3", optional = true }

# Async
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

[features]
default = []
wasm = ["wasmer"]

[dev-dependencies]
tempfile = "3.10"