[package]
name = "eridiffusion-common-stability"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
once_cell = "1.19"
tracing = "0.1"
flame-core = {path = "/home/alex/EriDiffusion/flame-core", default-features = false, features = ["cuda", "bf16_u16", "bf16_kernels"]}
eridiffusion-common-weights = { path = "../weights" }

