[package]
name = "eridiffusion-common-text"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
flame-core = { path = "/home/alex/EriDiffusion/flame-core", default-features = false, features = ["cuda", "bf16_u16", "bf16_kernels"] }
eridiffusion-core = { path = "../../core" }
eridiffusion-common-weights = { path = "../weights" }
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
safetensors = "0.4"
half = "2.4"

[dev-dependencies]
tempfile = "3.10"
