[package]
name = "eridiffusion-models-chroma"
version = "0.1.0"
edition = "2021"
description = "Chroma diffusion model (LoRA-only) for EriDiffusion using Flame GPU core"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
safetensors = "0.4"
half = "2.4"
thiserror = "1.0"

flame-core = {path = "/home/alex/EriDiffusion/flame-core", default-features = false, features = ["cuda", "bf16_u16", "bf16_kernels"]}
eridiffusion-common-weights = { path = "../../common/weights" }
eridiffusion-model-registry = { path = "../../common/model_registry" }
inventory = "0.3"
